k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-web
  namespace: lux
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lux.cloud
      secretName: cloud-web-tls
  rules:
    - host: lux.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-web
                port:
                  number: 80
